--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.1",
     "gatsby-plugin-stripe": "^1.2.1",
+    "gatsby-plugin-stripe-checkout": "^1.1.3",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-source-stripe": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.19",
